sfdc-pmt/main/default/objects/PMT_Task__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date this task is due to be completed</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>