sfdc-pmt/main/default/objects/PMT_Task__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When should this task start by?</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>