sfdc-pmt/main/default/objects/PMT_Task__c/fields/Task_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Task_Order_Number__c</fullName>
    <description>Used for ordering the tasks in the correct order.</description>
    <formula>VALUE(LEFT(Name, FIND(&quot; -&quot;, Name) - 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Order Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>