sfdc-pmt/main/default/objects/PMT_Task__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>