sfdc-pmt/main/default/objects/PMT_Task__c/recordTypes/Implementation_Task.recordType-meta.xml
<RecordType>
    <fullName>Implementation_Task</fullName>
    <active>true</active>
    <description>Used by the NCS Implementation team</description>
    <label>Implementation Task</label>
</RecordType>