sfdc-pmt/main/default/objects/PMT_Task__c/recordTypes/Onboarding_Task.recordType-meta.xml
<RecordType>
    <fullName>Onboarding_Task</fullName>
    <active>true</active>
    <description>Used by the NCS Onboarding team</description>
    <label>Onboarding Task</label>
</RecordType>