sfdc-pmt/main/default/objects/PMT_Task__c/validationRules/Prohibit_Task_Name_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Prohibit_Task_Name_Change</fullName>
    <active>true</active>
    <description>Do not allow the changing of task names once they have been entered.</description>
    <errorConditionFormula>ISCHANGED(Name)</errorConditionFormula>
    <errorMessage>Task name changing has been locked down by a validation rule. Please do not change the task names.</errorMessage>
</ValidationRule>