sfdc-pmt/main/default/objects/PMT_Task__c/validationRules/Protect_Template_Tasks_with_Permissions.validationRule-meta.xml
<ValidationRule>
    <fullName>Protect_Template_Tasks_with_Permissions</fullName>
    <active>true</active>
    <description>PMT Projects marked as templates should only be editable if a User has the PMT Template Author permissions. This includes the Tasks related to a Template. Currently only enforced on CAYAN specific templates.</description>
    <errorConditionFormula>AND(IsTemplate__c,  Phase__r.Project__r.RecordType.DeveloperName  == &apos;Cayan&apos;, NOT($Permission.PMT_Template_Author))</errorConditionFormula>
    <errorMessage>Only Template Authors can Create/Modify a Project Template.</errorMessage>
</ValidationRule>