sfdc-pmt/main/default/objects/PMT_Task__c/validationRules/Task_On_hold_Reason_not_null_if_On_Hold.validationRule-meta.xml
<ValidationRule>
    <fullName>Task_On_hold_Reason_not_null_if_On_Hold</fullName>
    <active>false</active>
    <description>Task On hold Reason Mandatory if Task Status is &apos;On Hold&apos;</description>
    <errorConditionFormula>(TEXT(Status__c)=&apos;On Hold&apos;) &amp;&amp; ISBLANK(On_Hold_Reason__c)</errorConditionFormula>
    <errorMessage>On Hold Reason should not be Blank if Status is &apos;On Hold&apos;.</errorMessage>
</ValidationRule>